--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Temp/FSTimeGet-93f86d98731e3634bab8f948247564d5
 Temp/FSTimeGet-cbf44d1641d2e1448b6b0ed9aee094e8
 Temp/FSTimeGet-e050c0ffdf56ed34596f74a246f89ff4
 Temp/__Backupscenes/0.backup
+Temp/FSTimeGet-5a3f52fab6d8f2948be35e06e650d6e7
+Temp/FSTimeGet-e6ba06b305c32a044ab907264e7849ff
